<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<item
		android:id="@+id/settingMenu"
		android:title="@string/save_setting" />
<!--		android:title="@string/应用设置"-->

	<item
		android:id="@+id/copyV4linkMenu"  
		android:title="@string/copy_link"
		android:tag="settingMenu"
	/>

	<item
		android:id="@+id/shareV4linkMenu"  
		android:title="@string/share_link"
	/>

	<item
		android:id="@+id/thisPhoneV4LocalAddressMenu"
		android:title="@string/all_lan_device_address"
	/>


	<item
		android:id="@+id/copyV6linkMenu"  
		android:title="@string/copy_ipv6_link_menu"
	/>
	<item
		android:id="@+id/shareV6linkMenu"  
		android:title="@string/share_ipv6_link_menu"
	/>
	<item
		android:id="@+id/thisPhoneV6LocalAddressMenu"
		android:title="@string/this_phone_IPV6_local_address_menu"
	/>

	<item
		android:id="@+id/clearResMenu"
		android:title="@string/clear_res_menu"
	/>

	<item  
		android:id="@+id/clearLogMenu"
		android:title="@string/clear_log_menu"
	/>    
	
	<item
		android:id="@+id/addAppToBaseDir"
		android:title="@string/add_app_to_base_dir"
    />

	<item
		android:id="@+id/helpMenu"
		android:title="@string/help_menu"
    />
</menu>

